# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.19074 (25 Aug 2011)

  25 Aug 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.19074.ebuild:
  Version bump, fix for bug #379469

*portage-2.2.01.19062 (20 Aug 2011)

  20 Aug 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.19011.ebuild, +portage-2.2.01.19062.ebuild:
  Version bump, matches portage-2.2.0_alpha51+, fixes bug #378515

*portage-2.2.01.19011 (26 Jul 2011)

  26 Jul 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18826.ebuild, +portage-2.2.01.19011.ebuild:
  Version bump, matches portage-2.2.0_alpha47+

*portage-2.2.01.18980 (17 Jul 2011)

  17 Jul 2011; Fabian Groffen <grobian@gentoo.org>
  -files/portage-2.2.00.13849-ebuildshell.patch,
  -files/portage-2.2.00.15842-configshell.patch,
  -files/portage-2.2.00.15842-shebangcheck.patch, -portage-2.2.01.18761.ebuild,
  +portage-2.2.01.18980.ebuild, +files/portage-2.2.01.18980-ebuildshell.patch:
  Version bump, matches portage-2.2.0_alpha45+, cleanup

*portage-2.2.01.18890 (01 Jul 2011)

  01 Jul 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18706.ebuild, +portage-2.2.01.18890.ebuild:
  Version bump, matches portage-2.2.0_alpha43

  17 Jun 2011; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.18826.ebuild,
  +files/portage-2.2.01.18826-aix-preservelibs.patch:
  fix the preserve-libs feature for AIX once more

*portage-2.2.01.18826 (14 Jun 2011)

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15842-r1.ebuild, -portage-2.2.01.15553.ebuild,
  +portage-2.2.01.18826.ebuild:
  Version bump, matches portage-2.2.0_alpha40

*portage-2.2.01.18761 (07 Jun 2011)

  07 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18252.ebuild, +portage-2.2.01.18761.ebuild:
  Version bump, matches portage-2.2.0_alpha38

*portage-2.2.01.18706 (29 May 2011)

  29 May 2011; Fabian Groffen <grobian@gentoo.org>